--- a/src/playbook_examples/demo_playbook_iter_01.yml
+++ b/src/playbook_examples/demo_playbook_iter_01.yml
@@ -2,5 +2,6 @@
 - hosts: webservers
   tasks:
   - name: Make sure all OS patches are applied
-    shell: yum update -y
-    sudo: yes 
+    yum:
+        name: '*'
+        state: latest
