--- a/src/playbook_examples/demo_playbook_iter_07.yml
+++ b/src/playbook_examples/demo_playbook_iter_07.yml
@@ -9,6 +9,6 @@
   - name: Install our needed packages for AWS Linux
     yum: state=present name={{ our_desired_package_name }}
     sudo: yes
-  - name: Start the nginx service
-    service: state=started name=nginx
-    sudo: yes
+  - svc:
+    name: nginx
+    state: started
